Implement diagonals feature

--- a/spec/runner.html
+++ b/spec/runner.html
@@ -12,6 +12,9 @@
   <script src="resources/qunit-1.14.0.js"></script>
 
   <script src="lib/floodFill.js"></script>
+
+  <script src="spec/dimensionsSpec.js"></script>
+  <script src="spec/diagonalsSpec.js"></script>
   <script src="spec/floodFillSpec.js"></script>
 </body>
 </html>
