--- a/spec/runner.html
+++ b/spec/runner.html
@@ -15,6 +15,7 @@
 
   <script src="spec/dimensionsSpec.js"></script>
   <script src="spec/diagonalsSpec.js"></script>
+  <script src="spec/boundariesSpec.js"></script>
   <script src="spec/floodFillSpec.js"></script>
 </body>
 </html>
